[workspace]
members = [
    "crates/zu",
    "crates/zu-docs",
    "crates/zu-util",
    "crates/zuicon-material",
]

exclude = [
    "tools",
]

resolver = "2"

[profile.release]
lto = true

[profile.release.package.zu-docs]
codegen-units = 1
# Optimize for binary size
opt-level = "z"
#panic = "abort"
