[package]
name = "rui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UI library based on yew"

[dependencies]
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.130"
strum = "0.22.0"
strum_macros = "0.22.0"
wasm-bindgen = "0.2.78"
yew = { git = "https://github.com/yewstack/yew", branch = "master" }
