[package]
name = "rui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UI library based on yew"

[dependencies]
log = "0.4.17"
serde = "1.0.152"
serde_derive = "1.0.152"
strum = "0.24.1"
strum_macros = "0.24.3"
wasm-bindgen = "0.2.83"
yew = { version="0.20.0", features=["csr"] }
