[package]
name = "rui"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org"]
readme = "README.md"
homepage = "https://github.com/RustVis/rui/crates/rui"
repository = "https://github.com/RustVis/rui"
documentation = "https://docs.rs/rui"
description = "Web App UI library based on yew"
keywords = ["web", "webasm", "javascript"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
log = "0.4.17"
serde = "1.0.152"
serde_derive = "1.0.152"
strum = "0.24.1"
strum_macros = "0.24.3"
wasm-bindgen = "0.2.83"
yew = { version="0.20.0", features=["csr"] }
