[package]
name = "zu-docs"
version = "0.1.0"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.29"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
log = "0.4.20"
serde = "1.0.190"
stylist = { version = "0.13.0", default-features = false, features=["random", "yew"] }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
zu = { path = "../zu" }
zu-util = { path = "../zu-util", version = "0.3.1" }

[dependencies.web-sys]
version = "0.3.65"
features = [
  "Document",
  "HtmlInputElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dependencies.zuicon-material]
path = "../zuicon-material"
version = "0.2.2"
features = [
  "AddShoppingCart",
  "Alarm",
  "ArrowDropDown",
  "Assignment",
  "Bookmark",
  "BookmarkBorder",
  "Check",
  "Delete",
  "Done",
  "Face",
  "Favorite",
  "FavoriteBorder",
  "Fingerprint",
  "Folder",
  "FormatAlignCenter",
  "FormatAlignJustify",
  "FormatAlignLeft",
  "FormatAlignRight",
  "FormatBold",
  "FormatColorFill",
  "FormatItalic",
  "FormatUnderlined",
  "Home",
  "Laptop",
  "LocationOn",
  "Mail",
  "MoreVert",
  "Pageview",
  "PhoneAndroid",
  "Restore",
  "Save",
  "Send",
  "Share",
  "Star",
  "Tv",
  "ViewList",
  "ViewModule",
  "ViewQuilt",
]
