[package]
name = "zu-docs"
version = "0.1.0"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.30"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
log = "0.4.21"
serde = "1.0.197"
stylist = { version = "0.13.0", default-features = false, features=["random", "yew"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
zu = { path = "../zu" }
zu-util = { path = "../zu-util", version = "0.3.1" }

[dependencies.web-sys]
version = "0.3.68"
features = [
  "Document",
  "HtmlInputElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dependencies.zuicon-material]
path = "../zuicon-material"
version = "0.2.2"
features = [
  "AddShoppingCart",
  "Alarm",
  "ArrowDropDown",
  "Assignment",
  "Bookmark",
  "BookmarkBorder",
  "Check",
  "Delete",
  "Done",
  "Face",
  "Favorite",
  "FavoriteBorder",
  "Fingerprint",
  "Folder",
  "FormatAlignCenter",
  "FormatAlignJustify",
  "FormatAlignLeft",
  "FormatAlignRight",
  "FormatBold",
  "FormatColorFill",
  "FormatItalic",
  "FormatUnderlined",
  "Home",
  "Laptop",
  "LocationOn",
  "Mail",
  "MoreVert",
  "Pageview",
  "PhoneAndroid",
  "Restore",
  "Save",
  "Send",
  "Share",
  "Star",
  "Tv",
  "ViewList",
  "ViewModule",
  "ViewQuilt",
]
