[package]
name = "zu-docs"
version = "0.1.0"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.31"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
log = "0.4.22"
serde = "1.0.214"
stylist = { version = "0.13.0", default-features = false, features=["random", "yew"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
zu = { path = "../zu" }
zu-util = { path = "../zu-util", version = "0.3.4" }

[dependencies.web-sys]
version = "0.3.72"
features = [
  "Document",
  "HtmlInputElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dependencies.zuicon-material]
path = "../zuicon-material"
version = "0.2.2"
