[package]
name = "zu-fluent-components"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zu-fluent-components"
description = "Yew component of fluent ui"
keywords = ["yew", "wasm", "fluent", "component"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
log = "0.4.17"
web-sys = "0.3.61"
yew = "0.20.0"
