[package]
name = "zu-util"
version = "0.3.3"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu/crates/zu-util"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zu-util"
description = "Utilities for zu component"
keywords = ["yew", "web", "wasm", "material-design"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
license = "LGPL-3.0"
publish = true

[features]
default = []
icon = ["roxmltree"]

[dependencies]
float-cmp = "0.9.0"
futures = "0.3.28"
roxmltree = { version = "0.18.0", optional = true }
wasm-bindgen = "0.2.87"
yew = "0.20.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlImageElement",
]
