[package]
name = "zu"
version = "0.3.2"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zu"
description = "Yew web components, implementing Material Design"
keywords = ["yew", "web", "wasm", "material-design"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
license = "LGPL-3.0"
publish = true

[dependencies]
log = "0.4.20"
stylist = { version = "0.13.0", default-features = false, features = ["parser", "random", "yew"] }
yew = "0.21.0"
yew-hooks = "0.3.0"
zu-util = { path = "../zu-util", version = "0.3.3" }

[build-dependencies]
inflections = "1.1.1"
rsass = "0.28.6"
zu-util = { path = "../zu-util", version = "0.3.3", features = ["icon"] }
