[package]
name = "zu"
version = "0.3.2"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zu"
description = "Yew web components, implementing Material Design"
keywords = ["yew", "web", "wasm", "material-design"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
license = "LGPL-3.0"
publish = true
rust-version = "1.81.0"

[dependencies]
log = "0.4.22"
stylist = { version = "0.13.0", default-features = false, features = ["parser", "random", "yew"] }
yew = "0.21.0"
yew-hooks = "0.3.2"
zu-util = { path = "../zu-util", version = "0.3.4" }

[dependencies.web-sys]
version = "0.3.72"
features = [
    "HtmlInputElement",
]

[build-dependencies]
inflections = "1.1.1"
rsass = "0.28.10"
zu-util = { path = "../zu-util", version = "0.3.4", features = ["icon"] }
