[package]
name = "zuicon-bs"
version = "0.2.1"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zuicon-bs"
description = "Wrapper of bootstrap icons for yew framework"
keywords = ["web", "webasm", "icons"]
categories = ["gui", "wasm", "web-programming"]
build = "build.rs"
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
yew = "0.20.0"

[build-dependencies]
inflections = "1.1.1"
zu-util = { path="../zu-util", version="0.3.2", features=["icon"] }
