[package]
name = "zuicon-material"
version = "0.1.1"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zuicon-material"
description = "Wrapper of material design icons for yew framework"
keywords = ["web", "webasm", "icons"]
categories = ["gui", "wasm", "web-programming"]
build = "build.rs"
edition = "2021"
license = "Apache-2.0"
publish = true

[dependencies]
yew = "0.20.0"
zu = { path = "../zu", version = "0.2.2" }

[build-dependencies]
inflections = "1.1.1"
reqwest = { version = "0.11.17", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
zuicon-util = { path="../zuicon-util", version="0.1.1" }
