[package]
name = "zuicon-material"
version = "0.3.1"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zuicon-material"
description = "Wrapper of material design icons for yew framework"
keywords = ["web", "webasm", "icons"]
categories = ["gui", "wasm", "web-programming"]
build = "build.rs"
edition = "2021"
license = "LGPL-3.0"
publish = true

[dependencies]
yew = "0.21.0"
zu = { path = "../zu", version = "0.3.3" }

[build-dependencies]
inflections = "1.1.1"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
zu-util = { path="../zu-util", version="0.3.5", features = ["icon"] }
